[package]
name = "firstname-chooser"
version = "0.1.0"
authors = ["desbma <desbma@users.noreply.github.com>"]
edition = "2018"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
arg_enum_proc_macro = "0.3"
anyhow = "1.0"
crossbeam = "0.8"
csv = "1.1"
decorum = "0.3"
dialoguer = "0.8"
heck = "0.3"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
indicatif = "0.15"
itertools = "0.10"
num_cpus = "1"
rand = "0.8"
reqwest = {version = "0.11", default-features = false, features = ["native-tls", "blocking", "gzip"]}
simple_logger = { version = "1.3", default-features = false }
structopt = "0.3"
strsim = "0.10"
unidecode = "0.3"
xdg = "2.1"
zip = "0.5"
